--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Stellar Slack bot</h1>
-<a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands&client_id=114346669478.121769044992"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+<a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands+team%3Aread&client_id=114346669478.121769044992"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
