--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
 <h1>Stellar Slack bot</h1>
+
+<p>This is a Slack Bot for the Stellar Network.</p>
+It works in two ways:
+- Streaming: It streams all operations on the stellar network to a channel
+- Queries: It allows users to query the stellar network for basic information such as accounts details, balance and transaction details.
+
+<h3>Usage</h3>
+You can query the Stellar network for account information and transactions as follows: 
+/stellar account [account_id]
+/stellar balance [account_id] 
+/stellar tx [transaction_id]
+
+<h3>Notice:</h3>
+This app is still under development. Comments are most welcome.
+Incase of any issues, please use the issue tracker here
+
+<h3>Add app to your slack channel</h3>
+
 <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands+team%3Aread&client_id=114346669478.121769044992"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+
+<h3>For custom integrations, drop a message.</h3>
