--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <h1>Stellar Slack bot</h1>
 
 <p>This is a Slack Bot for the Stellar Network.</p>
-It works in two ways:
-- Streaming: It streams all operations on the stellar network to a channel
-- Queries: It allows users to query the stellar network for basic information such as accounts details, balance and transaction details.
+<p>It works in two ways:</p>
+<ul>
+  <li>
+    - Streaming: It streams all operations on the stellar network to a channel
+  </li>
+  <li>
+    - Queries: It allows users to query the stellar network for basic information such as accounts details, balance and transaction details.
+  </li>
+</ul>
 
 <h3>Usage</h3>
+<p>
 You can query the Stellar network for account information and transactions as follows: 
-/stellar account [account_id]
-/stellar balance [account_id] 
-/stellar tx [transaction_id]
+</p>
+<ul>
+  <li>/stellar account [account_id]</li>
+  <li>/stellar balance [account_id] </li>
+  <li>/stellar tx [transaction_id]</li>
+</ul>
 
 <h3>Notice:</h3>
-This app is still under development. Comments are most welcome.
-Incase of any issues, please use the issue tracker here
+<p>This app is still under development. Comments are most welcome.</p>
+  <p>Incase of any issues, please use the issue tracker <a href="https://github.com/zee2093/stellar-slack-bot/issues">here</a></p>
 
 <h3>Add app to your slack channel</h3>
 
