--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<html>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+      
 <h1>Stellar Slack bot</h1>
 
 <p>This is a Slack Bot for the Stellar Network.</p>
@@ -30,3 +38,7 @@ You can query the Stellar network for account information and transactions as fo
 <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands+team%3Aread&client_id=114346669478.121769044992"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
 
 <h3>For custom integrations, drop a message.</h3>
+      </div>
+    </div>
+  </body>
+</html>
